force-app/main/default/objects/Industry_Profile__c/fields/Managed_Services_Provider__c.field-meta.xml
<CustomField>
    <fullName>Managed_Services_Provider__c</fullName>
    <label>Managed Services Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compucom</fullName>
            </value>
            <value>
                <fullName>DecisionOne</fullName>
            </value>
            <value>
                <fullName>EDS</fullName>
            </value>
            <value>
                <fullName>Fujitsu</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Spartan</fullName>
            </value>
            <value>
                <fullName>Tolt</fullName>
            </value>
            <value>
                <fullName>Unisys</fullName>
            </value>
            <value>
                <fullName>Wincor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>