force-app/main/default/objects/Industry_Profile__c/fields/Management_Application_Provider__c.field-meta.xml
<CustomField>
    <fullName>Management_Application_Provider__c</fullName>
    <label>Management Application Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abuzz</fullName>
            </value>
            <value>
                <fullName>Ariane</fullName>
            </value>
            <value>
                <fullName>Arinc</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>IER</fullName>
            </value>
            <value>
                <fullName>Materna</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>SITA</fullName>
            </value>
            <value>
                <fullName>Totality</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>