force-app/main/default/objects/Industry_Profile__c/fields/Merchandising_application_Provider__c.field-meta.xml
<CustomField>
    <fullName>Merchandising_application_Provider__c</fullName>
    <label>Merchandising application Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>