force-app/main/default/objects/Industry_Profile__c/fields/MF_ATM_Envelope_Deposit_Status__c.field-meta.xml
<CustomField>
    <fullName>MF_ATM_Envelope_Deposit_Status__c</fullName>
    <inlineHelpText>Status for this bank of deploying envelope-deposit ATMs.</inlineHelpText>
    <label>MF ATM + Envelope Deposit: Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>In Pilot</fullName>
            </value>
            <value>
                <fullName>In Evaluation</fullName>
            </value>
            <value>
                <fullName>No activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>