force-app/main/default/objects/Industry_Profile__c/fields/Mobile_Application__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile Application?</label>
    <type>Checkbox</type>
</CustomField>