force-app/main/default/objects/Industry_Profile__c/fields/Mobile_Couponing__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Couponing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the retailer offer a mobile couponing program that delivers mobile coupons (either barcoded or with offer key) to a mobile phone?</inlineHelpText>
    <label>Mobile Couponing</label>
    <type>Checkbox</type>
</CustomField>