force-app/main/default/objects/Industry_Profile__c/fields/Mobile_Phone_Banking_Solution__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_Banking_Solution__c</fullName>
    <inlineHelpText>Applications specifically written to enable banking via mobile phone.</inlineHelpText>
    <label>Mobile Phone Banking Solution</label>
    <length>200</length>
    <type>Text</type>
</CustomField>