force-app/main/default/objects/Industry_Profile__c/fields/Mobile_Website_Provider__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Website_Provider__c</fullName>
    <label>Mobile Website Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digby</fullName>
            </value>
            <value>
                <fullName>Inhouse</fullName>
            </value>
            <value>
                <fullName>NCR/Mobiqa</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Usablenet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>