force-app/main/default/objects/Industry_Profile__c/fields/NCR_ATM_Maintained_by_Others__c.field-meta.xml
<CustomField>
    <fullName>NCR_ATM_Maintained_by_Others__c</fullName>
    <inlineHelpText>Identify the number of NCR ATMs with SLM performed by someone other than NCR.</inlineHelpText>
    <label># NCR ATM Maintained by Others</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>