force-app/main/default/objects/Industry_Profile__c/fields/Network_Provider__c.field-meta.xml
<CustomField>
    <fullName>Network_Provider__c</fullName>
    <label>Network Provider</label>
    <length>25</length>
    <type>Text</type>
</CustomField>