force-app/main/default/objects/Industry_Profile__c/fields/No_of_Distribution_Centers__c.field-meta.xml
<CustomField>
    <fullName>No_of_Distribution_Centers__c</fullName>
    <label>No.of Distribution Centers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>