force-app/main/default/objects/Industry_Profile__c/fields/Number_of_ATMs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_ATMs__c</fullName>
    <label>Number of ATMs</label>
    <length>10</length>
    <type>Text</type>
</CustomField>