force-app/main/default/objects/Industry_Profile__c/fields/Number_of_Doctors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Doctors__c</fullName>
    <label>Number of Doctors</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>