force-app/main/default/objects/Industry_Profile__c/fields/Number_of_Emergency_Room_Visits_Year__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Emergency_Room_Visits_Year__c</fullName>
    <inlineHelpText>Please provide number of emergency room visits/year for hospital</inlineHelpText>
    <label>Number of Emergency Room Visits/Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>