force-app/main/default/objects/Industry_Profile__c/fields/Number_of_locations_worldwide__c.field-meta.xml
<CustomField>
    <fullName>Number_of_locations_worldwide__c</fullName>
    <inlineHelpText>Total number of store locations worldwide</inlineHelpText>
    <label>Number of locations worldwide</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>