force-app/main/default/objects/Industry_Profile__c/fields/Online_Mobile_Comments__c.field-meta.xml
<CustomField>
    <fullName>Online_Mobile_Comments__c</fullName>
    <label>Online &amp; Mobile Comments</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>