force-app/main/default/objects/Industry_Profile__c/fields/OS_2__c.field-meta.xml
<CustomField>
    <fullName>OS_2__c</fullName>
    <label>OS/2</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>