force-app/main/default/objects/Industry_Profile__c/fields/Other_Kiosk_functionality__c.field-meta.xml
<CustomField>
    <fullName>Other_Kiosk_functionality__c</fullName>
    <label>Other Kiosk - functionality</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employee/HR Applications</fullName>
            </value>
            <value>
                <fullName>Health Information</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>