force-app/main/default/objects/Industry_Profile__c/fields/Other_Names__c.field-meta.xml
<CustomField>
    <fullName>Other_Names__c</fullName>
    <label>Other (Names)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>