force-app/main/default/objects/Industry_Profile__c/fields/Other_SW_Features__c.field-meta.xml
<CustomField>
    <fullName>Other_SW_Features__c</fullName>
    <label>Other SW Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fee Collection</fullName>
            </value>
            <value>
                <fullName>Insurance verification</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Patient Portal Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>