force-app/main/default/objects/Industry_Profile__c/fields/Paper_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Paper_Manufacturer__c</fullName>
    <label>Paper Manufacturer</label>
    <type>TextArea</type>
</CustomField>