force-app/main/default/objects/Industry_Profile__c/fields/Patient_Portal__c.field-meta.xml
<CustomField>
    <fullName>Patient_Portal__c</fullName>
    <inlineHelpText>Please designate current patient portal provider, if any.</inlineHelpText>
    <label>Patient Portal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cerner</fullName>
            </value>
            <value>
                <fullName>Eclipsys</fullName>
            </value>
            <value>
                <fullName>Epic</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
            </value>
            <value>
                <fullName>McKesson</fullName>
            </value>
            <value>
                <fullName>Meditech</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Siemens</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>