force-app/main/default/objects/Industry_Profile__c/fields/Payment_switch_Provider__c.field-meta.xml
<CustomField>
    <fullName>Payment_switch_Provider__c</fullName>
    <label>Payment switch Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>