force-app/main/default/objects/Industry_Profile__c/fields/Payments_Debit_Credit_EBT__c.field-meta.xml
<CustomField>
    <fullName>Payments_Debit_Credit_EBT__c</fullName>
    <label>Payments (Debit, Credit, EBT)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACI</fullName>
            </value>
            <value>
                <fullName>ADSBG</fullName>
            </value>
            <value>
                <fullName>ADS Dallas</fullName>
            </value>
            <value>
                <fullName>AJB</fullName>
            </value>
            <value>
                <fullName>BlackHawk</fullName>
            </value>
            <value>
                <fullName>BP</fullName>
            </value>
            <value>
                <fullName>Chase</fullName>
            </value>
            <value>
                <fullName>Chevron</fullName>
            </value>
            <value>
                <fullName>Citgo</fullName>
            </value>
            <value>
                <fullName>CoinStar</fullName>
            </value>
            <value>
                <fullName>ConocoPhillips</fullName>
            </value>
            <value>
                <fullName>Exxon/Mobil</fullName>
            </value>
            <value>
                <fullName>Heartland</fullName>
            </value>
            <value>
                <fullName>InComm</fullName>
            </value>
            <value>
                <fullName>ISD</fullName>
            </value>
            <value>
                <fullName>Marathon</fullName>
            </value>
            <value>
                <fullName>NBS</fullName>
            </value>
            <value>
                <fullName>NCR-CAS</fullName>
            </value>
            <value>
                <fullName>OLA Credit Module</fullName>
            </value>
            <value>
                <fullName>Paypal</fullName>
            </value>
            <value>
                <fullName>PaySpot</fullName>
            </value>
            <value>
                <fullName>RBS Worldpay</fullName>
            </value>
            <value>
                <fullName>Retalix Connected Payments</fullName>
            </value>
            <value>
                <fullName>Retalix Open EPS</fullName>
            </value>
            <value>
                <fullName>Retalix WIN EPS</fullName>
            </value>
            <value>
                <fullName>S1</fullName>
            </value>
            <value>
                <fullName>Shell</fullName>
            </value>
            <value>
                <fullName>Solupay</fullName>
            </value>
            <value>
                <fullName>SVS</fullName>
            </value>
            <value>
                <fullName>Telecheck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>