force-app/main/default/objects/Industry_Profile__c/fields/Personas_Series__c.field-meta.xml
<CustomField>
    <fullName>Personas_Series__c</fullName>
    <inlineHelpText>Includes 58XX series.</inlineHelpText>
    <label>Personas Series</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>