force-app/main/default/objects/Industry_Profile__c/fields/PMS_SW_Provider__c.field-meta.xml
<CustomField>
    <fullName>PMS_SW_Provider__c</fullName>
    <inlineHelpText>Please designate physician PMS provider</inlineHelpText>
    <label>PMS SW Provider (Physician)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cerner</fullName>
            </value>
            <value>
                <fullName>Eclipsys</fullName>
            </value>
            <value>
                <fullName>Epic</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
            </value>
            <value>
                <fullName>McKesson</fullName>
            </value>
            <value>
                <fullName>Meditech</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Siemens</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>