force-app/main/default/objects/Industry_Profile__c/fields/POS_Comments__c.field-meta.xml
<CustomField>
    <fullName>POS_Comments__c</fullName>
    <label>POS Comments</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>