force-app/main/default/objects/Industry_Profile__c/fields/POW_SW_Maintenance_Provider__c.field-meta.xml
<CustomField>
    <fullName>POW_SW_Maintenance_Provider__c</fullName>
    <label>POS SW Maintenance Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACR Systems</fullName>
            </value>
            <value>
                <fullName>Alphabay</fullName>
            </value>
            <value>
                <fullName>Cornell Mayo</fullName>
            </value>
            <value>
                <fullName>Dynamics AX</fullName>
            </value>
            <value>
                <fullName>ECR</fullName>
            </value>
            <value>
                <fullName>Epicor</fullName>
            </value>
            <value>
                <fullName>Fiscal</fullName>
            </value>
            <value>
                <fullName>Fujitsu</fullName>
            </value>
            <value>
                <fullName>Gebit</fullName>
            </value>
            <value>
                <fullName>Gilbarco Passport</fullName>
            </value>
            <value>
                <fullName>GK</fullName>
            </value>
            <value>
                <fullName>Global Store</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>Inhouse</fullName>
            </value>
            <value>
                <fullName>Island Pacific</fullName>
            </value>
            <value>
                <fullName>JDA</fullName>
            </value>
            <value>
                <fullName>Micros</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Retalix</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>