force-app/main/default/objects/Industry_Profile__c/fields/Products_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Products_of_Interest__c</fullName>
    <label>Products of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cassettes</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Decals</fullName>
            </value>
            <value>
                <fullName>Deposit Envelopes</fullName>
            </value>
            <value>
                <fullName>Impact Ribbon</fullName>
            </value>
            <value>
                <fullName>Inking Supplies</fullName>
            </value>
            <value>
                <fullName>Laser Cartridges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>