force-app/main/default/objects/Industry_Profile__c/fields/Promotions_Optimization__c.field-meta.xml
<CustomField>
    <fullName>Promotions_Optimization__c</fullName>
    <label>Promotions Optimization</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dacos</fullName>
            </value>
            <value>
                <fullName>DemandTec</fullName>
            </value>
            <value>
                <fullName>KSS Retail</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Predictix</fullName>
            </value>
            <value>
                <fullName>Retalix Central Promotions</fullName>
            </value>
            <value>
                <fullName>Revionics</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>SAS</fullName>
            </value>
            <value>
                <fullName>Not Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>