force-app/main/default/objects/Industry_Profile__c/fields/Quick_Service_Restaurant__c.field-meta.xml
<CustomField>
    <fullName>Quick_Service_Restaurant__c</fullName>
    <label>Quick Service Restaurant</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Micros</fullName>
            </value>
            <value>
                <fullName>Radiant</fullName>
            </value>
            <value>
                <fullName>Retalix 10</fullName>
            </value>
            <value>
                <fullName>Retalix QSR / KMS</fullName>
            </value>
            <value>
                <fullName>Torex</fullName>
            </value>
            <value>
                <fullName>Not Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>