force-app/main/default/objects/Industry_Profile__c/fields/Receipt_on_label_deployed__c.field-meta.xml
<CustomField>
    <fullName>Receipt_on_label_deployed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For hospitality segment, has the retailer deployed receipt on label functionality</inlineHelpText>
    <label>Receipt on label deployed?</label>
    <type>Checkbox</type>
</CustomField>