force-app/main/default/objects/Industry_Profile__c/fields/Regional_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Regional_Coverage__c</fullName>
    <inlineHelpText>Please select regions where retailer operates stores</inlineHelpText>
    <label>Regional Coverage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CLA</fullName>
            </value>
            <value>
                <fullName>Emerging</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Japan/Korea</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>SAPAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>