force-app/main/default/objects/Industry_Profile__c/fields/Retail_Segment__c.field-meta.xml
<CustomField>
    <fullName>Retail_Segment__c</fullName>
    <inlineHelpText>Please select primary retailer segment</inlineHelpText>
    <label>Retail Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apparel &amp; Accessories</fullName>
            </value>
            <value>
                <fullName>Building, Hardware &amp; Garden</fullName>
            </value>
            <value>
                <fullName>General Merchandise</fullName>
            </value>
            <value>
                <fullName>Grocery &amp; Drug [Including Hypermarkets]</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Petrol &amp; Convenience, Other Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>